--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -27,6 +27,7 @@
 \newcommand{\kms}{{\ifmmode{{\mathrm{\,km\ s}^{-1}}}\else{\,km~s$^{-1}$}\fi}}
 \newcommand{\bullb}{MACS J0025.4-1222}
 \newcommand{\bulla}{1E0657---56} 
+\newcommand{\bullg}{SL2S J08544-0121}
 \shorttitle{Bullet Groups}
 \shortauthors{Fern\'andez-Trincado et al.}
 
@@ -208,8 +209,82 @@ kind of interactions observed in the Bolshoi simulation.
 \section{Results}
 \label{sec:results}
 
-\subsection{Separations and Relative Circular Velocities}
-\label{fig:separations}
+\subsection{Displacements and Relative Circular Velocities}
+\label{fig:displacement}
+
+
+
+\begin{figure*}
+\begin{center}
+\includegraphics[width=0.8\textwidth]{Figures_eps/figure_7_1.eps}
+\end{center}
+\caption{Integrated probability distribution for the displacement
+  between the host halo and its dominand sub-halo. The left panel
+  shows the results in terms of the physical displacements and the
+  right panel the same displacement normalized by the virial radius of
+  the host halo. The continous line corrresponds to the halos in the
+  group sample $V_{\rm c,host}>700\kms$ and the dashed lines to the 
+  The vertical stripe corresponds to the estimate of the separation
+  between the two dark matter clumps in the results reported by
+  \citet{Gastaldello} for the group SL2S J08544-0121. The right panel
+  shows the same results normalized by the virial radius of the host
+  halo.} 
+\label{fig:displacement}
+\end{figure*}
+
+
+
+\begin{figure*}
+\begin{center}
+\includegraphics[width=1.0\textwidth]{Figures_eps/figure_7_2.eps}
+\end{center}
+\caption{2D histogram in the plane $V_{\rm c,sub}/V_{\rm
+    c,host}$-$d_{2D}$. The left panel corresponds to groups and the
+  right panel to clusters. The circle with error bars corresponds to
+  \bullg data reported from \citet{2013A&A...552A..80M} and
+  \citet{Gastaldello}. The data used to construct the histograms
+  integrates the objects at all redshifts. }
+\label{fig:mass_displacement}
+\end{figure*}
+
+
+
+
+The main result of this paper is summarized in Figure
+\ref{fig:displacement}, it presents the integrated
+probability distribution for the displacement between the center of
+the host halo and its dominant sub-halo. The left pannel shows
+the displacement in physical units and the right pannel as a fraction
+of the virial radius of the host halo. 
+
+Figure \ref{fig:displacement} shows the results for two different
+populations; groups with $300\kms < V_{\rm c, host}<700\kms$ and
+clusters with $V_{\rm c,host}>700\kms$. Additionally, this is
+presented for all redshifts $z=0.0, 0.25, 0.5$ and $1.0$. 
+
+The panel with the physical displacements also shows a vertical stripe
+with the estimated displacement for the Bullet-group reported by
+\cite{Gastaldello}. Considering this system as consistent withe the
+groups sample we see that a fraction of $\sim XX\pm XX\%$ of the groups
+should present a displacement equal or larger than the one estimated
+for \bullg. The panel with the normalized displacements shows a
+distribution that can be considered close to universal in the sense
+that the two samples (groups and clusters) at all redshifts present a
+similar trend.[...]
+
+Figure \ref{fig:mass_displacement} shows 2D histograms in a plane
+composed by the ratio of the two circular velocities $V_{\rm c,
+  sub}/V_{\rm c, host}$ and the physical displacements. In each of the
+halo samples (left, groups; right, clusters) the two-dimensional
+distributions are similar and have been therefore integrated to build
+the 2D histogram.  
+
+On top of these 2D histograms there is an circle with error bars that
+represents the observational estimates for the system \bullg. [...]
+
+
+
+
 
 \subsection{Relative Velocities}
 \label{fig:velocities}
@@ -231,7 +306,6 @@ high. [...]
 
 \section{Conclusions}
 \label{sec:conclusions}
-
 
 
 \begin{figure*}
@@ -295,42 +369,6 @@ displacements and this is shown in the Figure \ref{displacements} for the two gr
  
 
 
-
-\begin{figure*}
-\begin{center}
-\includegraphics[width=1.0\textwidth]{Figures_eps/figure_7_2.eps}
-\includegraphics[width=1.0\textwidth]{Figures_eps/figure_7_3.eps}
-\end{center}
-\caption{Scatter $\left(\frac{v_{circ,sub}}{v_{circ,halo}}\right)$
-  vs $d_{2d,(X,Y)}$ for different redshifts. The  horizontal dashed
-  line correpond to
-  $\left(\frac{v_{circ,sub}}{v_{circ,halo}}\right)=0.5$ and the
-  red star simbol correspond to
-  $\left(\frac{v_{circ,sub}}{v_{circ,halo}}\right)=0.54$ for SL2S
-  SJ08544-0121 in \citet{2013A&A...552A..80M}. The  four top panels
-  are the sample with circular velocities $>700$ kms$^{-1}$ and the
-  four down panels are the sample with  circular velocities between
-  300 km s$^{-1}$ to 700 kms$^{-1}$.} 
-\label{newparameter}
-\end{figure*}
-
-
-
-\begin{figure*}
-\begin{center}
-\includegraphics[width=1.1\textwidth]{Figures_eps/figure_7_1.eps}
-\end{center}
-\caption{Cumulative distribution (P$>d_{2d,(X,Y)}$) of displacements
-  for the projection (X,Y). {\bf Left panel:} Sample with
-  $v_{max}>700$ kms$^{-1}$  for different redshifts. The vertical
-  dashed line, correspond to the separation between dark matter to
-  dark matter estimate in this work as the double of separation
-  between the collisional gas and dark matter of 124$\pm$20 kpc
-  reported by \citet{Gastaldello} for the group SL2S J08544-0121.
-  {\bf Right panel:} Sample with $300 $ kms$^{-1} <v_{max}<700 $
-  kms$^{-1}$ for different redshifts.}  
-\label{displacements}
-\end{figure*}
 
 
 \subsection{Number expected of Bullet Groups in the sample}
