--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -218,7 +218,8 @@ kind of interactions observed in the Bolshoi simulation.
 \begin{center}
 \includegraphics[width=0.8\textwidth]{Figures_eps/figure_7_1.eps}
 \end{center}
-\caption{Integrated probability distribution for the displacement
+\caption{
+Integrated probability distribution for the displacement
   between the host halo and its dominand sub-halo. The left panel
   shows the results in terms of the physical displacements and the
   right panel the same displacement normalized by the virial radius of
@@ -283,11 +284,28 @@ On top of these 2D histograms there is an circle with error bars that
 represents the observational estimates for the system \bullg. [...]
 
 
-
-
-
 \subsection{Relative Velocities}
+\label{sec:velocities}
+
+\begin{figure*}
+\begin{center}
+%\includegraphics[width=1.0\textwidth]{Figures_eps/figure_7_2.eps}
+\end{center}
+\caption{Integrated probability distribution for the relative velocity of the
+sub-halo with respect to its host. The left panel shows the results
+in physical units while the right panel show the same values
+normalized by the circular velocity of the host halo. The line coding
+follows the same structure as Figure \ref{fig:displacements}}
 \label{fig:velocities}
+\end{figure*}
+
+In Figure \ref{fig:velocities} we present the integrated probability
+of the relative peculiar velocities of the sub-halos with respect to
+the host halo. The left panel presents this velocity in physical units
+while the left panel presents them as a fraction of the circular
+velocity of the host halo. 
+
+
 
 \subsection{Collision Geometries}
 \label{fig:geometry}
@@ -303,6 +321,12 @@ described by systems where the collision already occurred.[...]
 
 The expectations to quantify this effects observationally are
 high. [...] 
+
+
+In order to facilitate the reproducibility and reuse of our results we
+have made available all the data and the source code available in a public
+repository. [...]  
+
 
 \section{Conclusions}
 \label{sec:conclusions}
