--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -146,7 +146,7 @@ Sub-structure & 75  & XX &    XX   &   XX     &   XX    &  XX   \\\hline
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.45\textwidth]{Figures_eps/Bullet_Group.eps}
+\includegraphics[width=0.45\textwidth]{New_figures/Bullet_Group.eps}
 \end{center}
 \caption{Configuration for a host halo (dashed circle) and
   sub-structure (black circle) in the sample.}  
@@ -216,7 +216,7 @@ kind of interactions observed in the Bolshoi simulation.
 
 \begin{figure*}
 \begin{center}
-\includegraphics[width=0.8\textwidth]{Figures_eps/figure_7_1.eps}
+\includegraphics[width=0.8\textwidth]{New_figures/figure_2.eps}
 \end{center}
 \caption{
 Integrated probability distribution for the displacement
@@ -224,7 +224,8 @@ Integrated probability distribution for the displacement
   shows the results in terms of the physical displacements and the
   right panel the same displacement normalized by the virial radius of
   the host halo. The continous line corrresponds to the halos in the
-  group sample $V_{\rm c,host}>700\kms$ and the dashed lines to the 
+  group sample $V_{\rm circ,host}>700\kms$ and the dashed lines to the
+  sample $V_{\rm circ,host}<700\kms$.
   The vertical stripe corresponds to the estimate of the separation
   between the two dark matter clumps in the results reported by
   \citet{Gastaldello} for the group SL2S J08544-0121. The right panel
